--- a/index.html
+++ b/index.html
@@ -1,7 +1,68 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<style>
+		.projects{
+		height: 50px;
+		width: 125px;
+		background-color: inherit;
+		border-radius: 12px;
+		}
+		.github{
+		height: 50px;
+		width: 125px;
+		border-radius: 12px;
+		background-color: #394565;
+		color: white;
+		}
+		.btn{
+		border: none;
+		padding:14x 28x;
+		font-size: 16px;
+		display: inline-block;
+		background-color: inherit;
+		position: relative;
+		top: -33px;
+		right: -800px;
+		}
+		h1 {
+			background-image: url('portfolio.jpg');
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
+		}
+		
+		.education {color: Green;}
+		.resume {color: blue;}
+</style> 
+ </style>
+</head>
+
+
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	
+	<h1><center>
+	<button class="btn education">Education</button>
+	<button class="btn resume">Resume</button>
+	<br>
+	Ryan Lange's Portfolio
+	<br>
+	<br>
+	<br>
+	<br>
+	<p> Software Engineer </p>
+	<br>
+	<br>
+	<button class="projects">Projects</button>
+	<button class="github">Github</button>
+	<br>
+	<br>
+	<center>
+	<center>
+<!choose new img ||| style="background-color:#394565;">
+		<p style="background-image: ('portfolio.jpg')";</p>
+		
+	</center>
+	</h1>
 </body>
 </html>
