--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 </style> 
  </style>
 </head>
-<title>Ryan Lange | Portfolio</title>
 
+<title>Ryan Lange | Portfolio</title>
+<link rel="bookmark icon" href="bookmarkimg.jpg" />
 
 <body>
 	
