--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <title>Ryan Lange | Portfolio</title>
-<link rel="bookmark icon" href="bookmarkimg.jpg" />
+<link rel="bookmark icon" href="bookmarkimg.jpg" /link>
 
 <body>
 	
