--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
 <head>
 	<style>
-		projects{
-		font-size: 20px;
+		.projects{
+		text-decoration: none;
+		background-color: #EEEEEE;
+		padding: 2px 6px 2px 6px;
 		height: 50px;
 		width: 125px;
-		background-color: inherit;
 		border-radius: 12px;
-		border-style: solid;
+		background-color: gray;
+		color: white;
 		}
 		
 		.github{
@@ -46,8 +48,13 @@
 			height: 2000px;
 		} 
 		
-		.education {color: Green;}
-		.resume {color: blue;}
+		.education {
+		color: White;
+		font-size: 20px;
+		}
+		.resume {
+		font-size: 20px;
+		color: blue;}
 </style> 
  </style>
 </head>
@@ -70,8 +77,10 @@
 	<p> Software Engineer </p>
 	<br>
 	<br>
+	<form action="https://github.com/rpl17">
 	<a class="projects" href="#projects">Projects</a>
-	<button id="github" class="github">  <img src="github.jpg"/> Github</button>
+    <button id="github" type="submit" class="github"> <img src="github.JPG"/> Github</button>
+	</form>
 	<br>
 	<br>
 <!choose new img ||| style="background-color:#394565;">
