--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		color: white;
 		}
 		
+		.title{
+		background-color:inherit;
+		}
+		
 		.github{
 		font-size: 20px;
 		height: 50px;
@@ -27,34 +31,39 @@
 		font-size: 16px;
 		display: inline-block;
 		background-color: inherit;
-		position: relative;
-		top: -15px;
-		right: -800px;
+		position: absolute;
 		}
 		
-		h1 {
-			background-image: url('portfolio.jpg');
-			background-repeat: no-repeat;
-			background-size: 100% 100%;
-		}
 		html {
 		scroll-behavior: smooth;
 		}
+		
+		h1{
+		<!background-image:url('background.jpeg');>
+		background-size: cover;
+		}
+		
 		#github img {
 			height: 25px;  
 			width: 25px;
 		}
 		#projects {
+			border-style: solid;
 			height: 2000px;
 		} 
 	
 		.education {
-		color: White;
+		color: green;
 		font-size: 20px;
+		top: 10px;
+		right: 110px;
 		}
 		.resume {
 		font-size: 20px;
-		color: blue;}
+		color: blue;
+		top: 10px;
+		right: 20px;
+		}
 </style> 
  </style>
 </head>
@@ -68,8 +77,7 @@
 	<button class="btn education">Education</button>
 	<button class="btn resume">Resume</button>
 	<br>
-<! Change This to an image of bubble letters>
-	<p style="font-family:verdana"> Ryan Lange's Portfolio </p>
+	<p> <img src="rlportfolio.JPG"> </p>
 	<br>
 	<br>
 	<br>
@@ -82,16 +90,12 @@
     <button id="github" type="submit" class="github"> <img src="github.JPG"/> Github</button>
 	</form>
 	<br>
-	<br>
-<!choose new img ||| style="background-color:#394565;">
-		<p style="background-image: ('portfolio.jpg')";</p>
-		
 	</center>
 	</h1>
 	<h2><center>
-	<div id="projects">
-	<p> My Projects </p>
+	<div id="projects" style="background-color:#394565" >
 	<br>
+	<p> My Projects </p>
 	</div>
 	Travis Sucks
 </body>
