--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		
 		html {
 		scroll-behavior: smooth;
+		
 		}
 		
 		h1{
@@ -54,12 +55,14 @@
 		
 		#projects {
 			border-style: solid;
+			border-radius: 20px;
 			height: auto;
 		} 
 		
 		#resume {
+		border-radius: 20px;
 		border-style: solid;
-			height: 1000px;
+			height: auto;
 		}
 		
 		.resume {
@@ -138,10 +141,15 @@
 	<form action="https://github.com/rpl17/Casino" target="_blank">
 	Download Code:  <button id="github" type="submit" style= "cursor:pointer" class="github"> <img src="github.JPG"/> Github</button>
 	</form>
+	C Lang Random Assignments
+	<p> <img src="clang.JPG"width=20%></p>
+	<form action="https://github.com/rpl17/C-Lang-Programing-Assignments" target="_blank">
+	Download Code:  <button id="github" type="submit" style= "cursor:pointer" class="github"> <img src="github.JPG"/> Github</button>
+	</form>
 	</h3>
 	<div id="resume" class="imageContainer">
 	<center><p style="font-size:30px"> Resume </p></center>
-	<iframe height=100% width=100% src="RyanLangeResume.pdf" >
+	<center><iframe height=99% width=99% src="RyanLangeResume.pdf" ></center>
 	</div>
 </body>
 </html>
