--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 	<! target="_blank">
 	<a class="btn resume" href="#resume">Resume</a>
 	<br>
-	<p> <img src="rlportfolio.JPG"> </p>
+	<! <img src="rlportfolio.JPG"> 
+	<p>Ryan Lange's Portfolio</p>
 	<br>
 	<br>
 	<br>
