--- a/index.html
+++ b/index.html
@@ -138,8 +138,29 @@
 	<br>
 	<br>
 	Software Engineering Capstone: Casino Application
-	<p> <img src="casino.JPG"width=50%><img src="casino2.JPG" width=50%> </p>
+	<p> <img src="casino.JPG"width=50%><img src="casino2.JPG" width=49.5%> </p>
 	<form action="https://github.com/rpl17/Casino" target="_blank">
+	Download Code:  <button id="github" type="submit" style= "cursor:pointer" class="github"> <img src="github.JPG"/> Github</button>
+	</form>
+	<br>
+	<br>
+	<br>
+	<br>
+	Tictactoe
+	<p> <img src="tictac.JPG"width=50%><img src="tictac2.JPG" width=46.5%> </p>
+	<form action="https://github.com/rpl17/TicTacToe" target="_blank">
+	Download Code:  <button id="github" type="submit" style= "cursor:pointer" class="github"> <img src="github.JPG"/> Github</button>
+	</form>
+	<form action="https://docs.google.com/presentation/d/14py4a373uiVpXAAAMF1ljX187ujAl9CK/edit?usp=sharing&ouid=101747237781924748907&rtpof=true&sd=true" target="_blank">
+	Presentation Demo:  <button type="submit" style= "cursor:pointer" class="powerpoint">Demo</button>
+	</form>
+	<br>
+	<br>
+	<br>
+	<br>
+	Contacts Application
+	<p> <img src="contact.JPG"width=35%> </p>
+	<form action="https://github.com/rpl17/ContactsApp" target="_blank">
 	Download Code:  <button id="github" type="submit" style= "cursor:pointer" class="github"> <img src="github.JPG"/> Github</button>
 	</form>
 	C Lang Random Assignments
